--- a/Birlik_Mobile/Components/Layout/NavMenu.razor
+++ b/Birlik_Mobile/Components/Layout/NavMenu.razor
@@ -23,7 +23,7 @@
                     <i class="bi bi-person-circle"></i>
                 </div>
                 <div class="user-info">
-                    <span class="user-name">@AuthService.CurrentUser.Usuario</span>
+                    <span class="user-name">@AuthService.CurrentUser.Nombre</span>
                     <span class="user-role">@AuthService.CurrentUser.Rol</span>
                 </div>
             </div>
